--- a/font-end/index.html
+++ b/font-end/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Apple Shop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -66,8 +66,8 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./dist/lib/easing/easing.min.js"></script>
-    <script src="./dist/lib/waypoints/waypoints.min.js"></script>
+    <!-- <script src="./dist/lib/easing/easing.min.js"></script>
+    <script src="./dist/lib/waypoints/waypoints.min.js"></script> -->
     <script src="./dist/lib/lightbox/js/lightbox.min.js"></script>
     <script src="./dist/lib/owlcarousel/owl.carousel.min.js"></script>
 
